# QCtest

./: README.md  pyproject.toml  requirements-qiskit.txt
docs/: proposal.md
src/quantum_credit_risk/: __init__.py  classical.py  cli.py  portfolio.py  qiskit_backend.py  quantum.py
tests/: test_qiskit_backend.py  test_risk_metrics.py
