[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-credit-risk"
version = "0.1.0"
description = "Starter project for credit risk analytics with a QAE-ready design"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
